# src/main/java/ch/postfinance/swiss/hacks/resource/TransactionsResourceImpl.java
@@ -2,10 +2,12 @@ package ch.postfinance.swiss.hacks.resource;
 
 import static ch.postfinance.swiss.hacks.resource.beans.TransferResponse.Status.SUCCESS;
 
+import ch.postfinance.swiss.hacks.domain.Transaction;
 import ch.postfinance.swiss.hacks.resource.beans.FundTransfer;
 import ch.postfinance.swiss.hacks.resource.beans.TransferResponse;
 import ch.postfinance.swiss.hacks.service.IllegalTransactionException;
 import ch.postfinance.swiss.hacks.service.TransactionService;
+import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import io.quarkus.security.Authenticated;
 import jakarta.annotation.security.RolesAllowed;
 import jakarta.inject.Inject;
@@ -13,6 +15,9 @@ import jakarta.ws.rs.BadRequestException;
 import jakarta.ws.rs.core.Response;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.security.spec.ECField;
+import java.util.List;
 
 @Authenticated
 public class TransactionsResourceImpl implements TransactionsResource {
@@ -46,7 +51,11 @@ public class TransactionsResourceImpl implements TransactionsResource {
     }
 
     @Override
+    @RolesAllowed("user")
     public Response viewTransactionHistory() {
-        return null;
+        log.info("Fetching transaction history");
+        List<Transaction> transactions = transactionService.getAllTransactions();
+        log.info("Fetched {} transactions", transactions.size());
+        return Response.ok(transactions).build();
     }
 }
